--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
    <script src="https://cdn.tailwindcss.com"></script>
-   {{!-- <link rel="stylesheet" href="https://unpkg.com/filepond/dist/filepond.css" /> --}}
-  <title>Formulaire</title>
+  <title>{{titre}}</title>
 </head>
 <body>
+  {{>header}}
 
   {{{body}}}
 
-{{!-- <script src="https://unpkg.com/filepond/dist/filepond.js"></script> --}}
-{{!-- <script src="js/script.js"></script> --}}
+  {{>footer}}
+
 
 </body>
 </html>
