--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
    <script src="https://cdn.tailwindcss.com"></script>
+
   <title>{{titre}}</title>
 </head>
 <body>
@@ -15,5 +16,6 @@
   {{>footer}}
 
 
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </body>
 </html>
