Factorisation du code

--- a/views/carte.handlebars
+++ b/views/carte.handlebars
@@ -1,4 +1,4 @@
-<h1>{{countryName}}</h1>
+<h1 class="text-2xl text-center px-2 font-bold">{{countryName}}</h1>
 <div id="map" class="h-[800px] w-full"></div>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
