--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
       <select name="pays" 
               class="mt-1 p-2 border rounded-md w-full focus:outline-none focus:ring focus:border-blue-300">
         {{#each countries}}
-        <option value="{{this.name}}">{{this.name}}</option>
+        <option value="{{this.name}}" class="flex ">{{this.name}}</option>
         {{/each}}
       </select>
     </div>
